# tinyfx

./: .gitmodules  CMakeLists.txt  README.md
cmake/: build_esp8266.sh  freertos_esp32_xtensa-esp32-elf.cmake  freertos_esp8266_xtensa-lx106.cmake  linux_arm-fsl.cmake  linux_arm.cmake  linux_x86.cmake  macos.cmake  openwrt_mt7688.cmake  windows_x86.cmake
source/: CMakeLists.txt
source/IotThingManager/: CMakeLists.txt
source/IotTypedef/: CMakeLists.txt
source/IotTypedef/api/: iot_api.h
source/IotTypedef/controlled/: PropertyChangedObserver.c
source/IotTypedef/data/: DataType.c
source/IotTypedef/data/value/: BoolValue.c  DataBlobValue.c  Uint64Value.c  Uint8Value.c
source/IotTypedef/device/: Accessory.c  DeviceConfig.c  Property.h  Service.c
source/IotTypedef/test/: CMakeLists.txt
source/cmake/: build_openwrt_mt7688.sh  freertos_esp32_xtensa-esp32-elf.cmake  linux_arm.cmake  linux_x86.cmake  macos.cmake  openwrt_mt7688.cmake  windows_x86.cmake
source/src/: CMakeLists.txt
source/src/IotDeviceManager/: CMakeLists.txt  DeviceManager.c  DeviceManager.h  DeviceRuntime.c  DeviceRuntime.h
source/src/IotExecute/: CMakeLists.txt  IotExcute.c  IotExcute.h
source/src/IotFactory/: CMakeLists.txt  DeviceFactory.c  DeviceFactory.h  ProductFactory.c  ProductFactory.h
source/src/IotFactory/example/: CMakeLists.txt  example_device_instance.c
source/src/IotInstance/: CMakeLists.txt  DeviceInstance.c  DeviceInstance.h  HttpInstance.c  HttpInstance.h  HttpInstanceHandler.c  HttpInstanceHandler.h  HttpInstanceHandlerContext.c  HttpInstanceHandlerContext.h
source/src/IotInstance/example/: CMakeLists.txt  example_device_instance.c  example_homekit.c
source/src/IotLauncher/: CMakeLists.txt  IotLauncher.c  IotLauncher.h  IotRuntime.c  IotRuntime.h
source/src/IotOperation/: ActionInvoker.c  ActionInvoker.h  CMakeLists.txt  PropertySetter.c  PropertySetter.h
source/src/IotThingManager/thing/: ThingManager.c  ThingManager.h  ThingRuntime.c  ThingRuntime.h
source/src/IotTypedef/: CMakeLists.txt
source/src/IotTypedef/access/: AccessType.c  AccessType.h
source/src/IotTypedef/bean/: ActionBean.c  ActionBean.h  PropertiesBean.c  PropertiesBean.h  PropertyBean.c  PropertyBean.h
source/src/IotTypedef/constant/: iot_constant.h
source/src/IotTypedef/constraint/: typedef_constraint.h
source/src/IotTypedef/controlled/: ActionOnInvoke.h  DeviceConfig.c  DeviceConfig.h  DeviceControllalbe.c  DeviceControllalbe.h
source/src/IotTypedef/data/: Data.c  Data.h  DataType.c  DataType.h  DataValue.h
source/src/IotTypedef/data/value/: FloatValue.c  HexValue.c  HexValue.h  IntValue.c  StringValue.c  Tlv8.c  Tlv8Value.c  Uint16Value.c  Uint32Value.c
source/src/IotTypedef/device/: Accessory.c  Action.c  Action.h  Argument.c  Argument.h  Device.c  Device.h  DeviceHost.c  DeviceHost.h  DeviceHostConfig.c  DeviceHostConfig.h  Event.c  Event.h  Property.c  Property.h  Service.c  Service.h  Thing.c  Thing.h
source/src/IotTypedef/device/access/: Access.c  Access.h
source/src/IotTypedef/device/config/: AccessoryConfig.h  DeviceConfig.h
source/src/IotTypedef/device/constraint/: ValueList.c  ValueList.h  ValueRange.c  ValueRange.h
source/src/IotTypedef/device/format/: Format.c  Format.h
source/src/IotTypedef/device/handler/: AccessKeyHandler.h  ActionOnInvoke.h  EventOnOccurred.h  PropertyOnControl.h
source/src/IotTypedef/error/: IotStatus.h
source/src/IotTypedef/operation/: AID.h  ActionOperation.c  ActionOperation.h  EID.h  EventOperation.c  EventOperation.h  PID.c  PID.h  PropertyOperation.c  PropertyOperation.h  PropertyOperations.c  PropertyOperations.h
source/src/IotTypedef/operator/: DeviceOperator.c  DeviceOperator.h
source/src/IotTypedef/product/: Product.c  Product.h
source/src/IotTypedef/product/config/: AccessoryConfig.h  ProductConfig.h
source/src/IotTypedef/product/handler/: ActionHandler.h  IdentifyListener.h  PropertyHandler.h
source/src/IotTypedef/product/lock/: ProductLocker.h
source/src/IotTypedef/product/operator/: ProductOperator.c  ProductOperator.h
source/src/IotTypedef/status/: IotStatus.h
source/src/IotTypedef/test/: CMakeLists.txt  test_tlv8.c  test_tlv8_memory_leak.c
source/src/IotTypedef/thing/: Thing.c  Thing.h
source/src/IotTypedef/thing/config/: AccessoryCategoryIdentifier.h  ThingConfig.h
source/src/IotTypedef/unit/: Unit.h
source/src/IotTypedef/urn/: Urn.c  Urn.h  UrnType.c  UrnType.h
