#-------------------------------------------------------------------------------------
#
# TinyFX
#
#-------------------------------------------------------------------------------------
ADD_SUBDIRECTORY(IotTypedef)
ADD_SUBDIRECTORY(IotDeviceManager)
ADD_SUBDIRECTORY(IotInstance)
ADD_SUBDIRECTORY(IotExecute)